[tool.poetry]
name = "argyle"
version = "0.1.0"
description = ""
authors = ["Jones Sabino <jones.sabino@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
playwright = "1.17.2"
pydantic = "1.8.2"
chardet = "4.0.0"
tenacity = "8.0.1"

[tool.poetry.dev-dependencies]
pytest = "5.2"
pylama = "8.3.3"
autopep8 = "1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
